fix spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -99,7 +99,7 @@ header {
   position:fixed;
 }
 
-header ul {
+footer ul {
   list-style:none;
   height:40px;
   
